cmake_minimum_required(VERSION 2.6 FATAL_ERROR)
project(test)
find_package(PCL 1.7 REQUIRED)
include_directories(${PCL_INCLUDE_DIRS})
link_directories(${PCL_LIBRARY_DIRS})
add_definitions(${PCL_DEFINITIONS})

set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -Wno-deprecated-declarations")

#add_executable(pipeline pipeline.cpp Pipeline.cpp)
#target_link_libraries(pipeline ${PCL_LIBRARIES})
add_executable(train train.cpp Trainer.cpp Pipeline.cpp file_tools.cpp)
target_link_libraries(train ${PCL_LIBRARIES})
add_executable(reco reco.cpp Reco.cpp Pipeline.cpp file_tools.cpp)
target_link_libraries(reco ${PCL_LIBRARIES})
